# polkadot-sdk-minimal-template

./: Cargo.toml  README.md  timestamp.txt
.github/workflows/: ci.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: lib.rs
