[package]
name = "minimal-template-node"
description = "A miniaml Substrate-based Substrate node, ready for hacking."
version = "0.0.0"
license = "MIT-0"




publish = false
build = "build.rs"

[lints]


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
futures-timer = "3.0.1"
jsonrpsee = { version = "0.22", features = ["server"] }


sc-cli = { version = "0.38.0" }
sc-executor = { version = "0.34.0" }
sc-network = { version = "0.36.0" }
sc-service = { version = "0.37.0" }
sc-telemetry = { version = "17.0.0" }
sc-transaction-pool = { version = "30.0.0" }
sc-transaction-pool-api = { version = "30.0.0" }
sc-consensus = { version = "0.35.0" }
sc-consensus-manual-seal = { version = "0.37.0" }
sc-rpc-api = { version = "0.35.0" }
sc-basic-authorship = { version = "0.36.0" }
sc-offchain = { version = "31.0.0" }
sc-client-api = { version = "30.0.0" }

sp-timestamp = { version = "28.0.0" }
sp-keyring = { version = "33.0.0" }
sp-api = { version = "28.0.0" }
sp-blockchain = { version = "30.0.0" }
sp-block-builder = { version = "28.0.0" }
sp-io = { version = "32.0.0" }
sp-runtime = { version = "33.0.0" }

substrate-frame-rpc-system = { version = "30.0.0" }

frame-support = { version = "30.0.0", default-features = false }
frame-system = { version = "30.0.0", default-features = false }
runtime = { package = "minimal-template-runtime", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
