[package]
name = "minimal-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "MIT-0"




publish = false

[lints]


[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.6.0", default-features = false }

# this is a frame-based runtime, thus importing `frame` with runtime feature enabled.
frame-support = { version = "30.0.0", default-features = false }
frame-system = { version = "30.0.0", default-features = false }
frame-executive = { version = "30.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "28.0.0", default-features = false }

sp-core = { version = "30.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-session = { version = "29.0.0", default-features = false }
sp-inherents = { version = "28.0.0", default-features = false }
sp-runtime = { version = "33.0.0", default-features = false }
sp-offchain = { version = "28.0.0", default-features = false }
sp-api = { version = "28.0.0", default-features = false }
sp-version = { version = "31.0.0", default-features = false }
sp-block-builder = { version = "28.0.0", default-features = false }
sp-transaction-pool = { version = "28.0.0", default-features = false }

# pallets that we want to use
pallet-balances = { version = "30.0.0", default-features = false }
pallet-sudo = { version = "30.0.0", default-features = false }
pallet-timestamp = { version = "29.0.0", default-features = false }
pallet-transaction-payment = { version = "30.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "30.0.0", default-features = false }

# genesis builder that allows us to interacto with runtime genesis config
sp-genesis-builder = { version = "0.9.0", default-features = false }

# local pallet templates
pallet-minimal-template = { path = "../pallets/template", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "19.0.0", optional = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",

	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",

	"sp-api/std",
	"sp-block-builder/std",
#	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
#	"sp-storage/std",
	"sp-transaction-pool/std",
#	"sp-version/std",
#	"sp-weights/std",

	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"pallet-minimal-template/std",

	"sp-genesis-builder/std",
	"substrate-wasm-builder",
]
